<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_mug_variant"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_mix"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_menu_checkout"
            android:title="@string/menu_checkout"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_account_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
