<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/firstNameRegistration"
        style="@style/credentials"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lastNameRegistration"
        style="@style/credentials"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameRegistration"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailRegistration"
        style="@style/credentials"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameRegistration"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordRegistration"
        style="@style/credentials"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegistration"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirmPasswordRegistration"
        style="@style/credentials"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistration"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextHighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/registration"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_border"
        android:drawableEnd="@drawable/ic_check"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="completeRegistration"
        android:paddingLeft="50dp"
        android:paddingRight="40dp"
        android:text="@string/registration2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegistration"
        app:layout_constraintVertical_bias="0.203" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="95dp"
        android:layout_height="112dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_barback" />

</androidx.constraintlayout.widget.ConstraintLayout>